--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fast-react-pizza",
+  "name": "simply-sweet-by-amy",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.6.5",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-modal-image": "^2.6.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
